feat: update base template

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -14,8 +14,27 @@
 </head>
 
 <body class="font-ubuntu">
+    <!-- Pre Loader -->
+    <div id="body" class="theme-cyan">
+        <!-- Page Loader -->
+        <div class="page-loader-wrapper">
+            <div class="loader">
+                <div class="mt-3">
+                    <img class="zmdi-hc-spin w60" src="{{ url_for('static', filename='assets/images/loader.svg') }}"
+                        alt="Amaze">
+                </div>
+                <p>Please wait...</p>
+            </div>
+        </div>
 
-    {% block body %} {% endblock %}
+        <div class="overlay"></div>
+        <!-- Top Bar -->
+        {% include 'layouts/topbar.html' %}
+        <!-- Block Body -->
+        {% block body %} {% endblock %}
+        <!-- Block Footer -->
+        {% include 'layouts/footer.html' %}
+    </div>
 
     <!-- Jquery Core Js -->
     <script src="{{ url_for('static', filename='assets/bundles/libscripts.bundle.js') }}"></script>
