--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Responsive Bootstrap 4 and web Application ui kit.">
-    <title>Pasar Kramat :: Comodity Price Predict</title>
+    <title>Pasar Kramat - Comodity Price Predict</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon"> <!-- Favicon-->
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/plugins/bootstrap/css/bootstrap.min.css') }}">
     <!-- Custom Css -->
@@ -29,7 +29,7 @@
 
         <div class="overlay"></div>
         <!-- Top Bar -->
-        {% include 'layouts/topbar.html' %}
+        {% include 'layouts/navbar.html' %}
         <!-- Block Body -->
         {% block body %} {% endblock %}
         <!-- Block Footer -->
