--- a/templates/index.html
+++ b/templates/index.html
@@ -65,8 +65,8 @@
             <div class="col-md-12 col-lg-12">
                 <div class="card">
                     <div class="body">
-                        <p class="copyright mb-0">Copyright 2020 © All Rights Reserved. <a
-                                href="https://thememakker.com/" target="_blank">ThemeMakker</a></p>
+                        <p class="copyright mb-0">Copyright 2024 © All Rights Reserved. <a
+                                href="https://hafizcaniago.my.id/" target="_blank">Hafiz Caniago</a></p>
                     </div>
                 </div>
             </div>
