--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,18 @@
 
     <div class="container">
         <div class="row clearfix">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <div class="card">
+                    <div class="header">
+                        <h2>Welcome to Comodity Price Predict - Pasar Kramat Kota Cirebon</h2>
+                        <p class="mt-3" style="margin-bottom: unset;">Comodity Available : Cabai Merah Besar, Cabai Merah Keriting, Cabai Rawit Hijau, Cabai Rawit Merah, Bawang Merah</p>
+                    </div>
+                </div>
+            </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                 <div class="card">
                     <div class="header">
-                        <h2>Area Datetime</h2>
+                        <h2>Cabai Merah Besar</h2>
                         <ul class="header-dropdown dropdown">
                             <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_month">1M</button>
                             </li>
@@ -42,7 +50,67 @@
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                 <div class="card">
                     <div class="header">
-                        <h2>Area Datetime</h2>
+                        <h2>Cabai Merah Keriting</h2>
+                        <ul class="header-dropdown dropdown">
+                            <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_month">1M</button>
+                            </li>
+                            <li><button class="btn btn-sm btn-outline-secondary mr-1" id="six_months">6M</button>
+                            </li>
+                            <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_year"
+                                    class="active">1Y</button></li>
+                            <li><button class="btn btn-sm btn-outline-secondary mr-1" id="ytd">YTD</button></li>
+                            <li><button class="btn btn-sm btn-outline-secondary" id="all">ALL</button></li>
+                        </ul>
+                    </div>
+                    <div class="body">
+                        <div id="apex-timeline-chart"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                <div class="card">
+                    <div class="header">
+                        <h2>Cabai Rawit Merah</h2>
+                        <ul class="header-dropdown dropdown">
+                            <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_month">1M</button>
+                            </li>
+                            <li><button class="btn btn-sm btn-outline-secondary mr-1" id="six_months">6M</button>
+                            </li>
+                            <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_year"
+                                    class="active">1Y</button></li>
+                            <li><button class="btn btn-sm btn-outline-secondary mr-1" id="ytd">YTD</button></li>
+                            <li><button class="btn btn-sm btn-outline-secondary" id="all">ALL</button></li>
+                        </ul>
+                    </div>
+                    <div class="body">
+                        <div id="apex-timeline-chart"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                <div class="card">
+                    <div class="header">
+                        <h2>Cabai Rawit Hijau</h2>
+                        <ul class="header-dropdown dropdown">
+                            <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_month">1M</button>
+                            </li>
+                            <li><button class="btn btn-sm btn-outline-secondary mr-1" id="six_months">6M</button>
+                            </li>
+                            <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_year"
+                                    class="active">1Y</button></li>
+                            <li><button class="btn btn-sm btn-outline-secondary mr-1" id="ytd">YTD</button></li>
+                            <li><button class="btn btn-sm btn-outline-secondary" id="all">ALL</button></li>
+                        </ul>
+                    </div>
+                    <div class="body">
+                        <div id="apex-timeline-chart"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                <div class="card">
+                    <div class="header">
+                        <h2>Bawang Merah</h2>
                         <ul class="header-dropdown dropdown">
                             <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_month">1M</button>
                             </li>
