feat: make chart working

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                         </ul>
                     </div>
                     <div class="body">
-                        <div id="apex-timeline-chart"></div>
+                        <div id="apex-cabai-merah-besar"></div>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                         </ul>
                     </div>
                     <div class="body">
-                        <div id="apex-timeline-chart"></div>
+                        <div id="apex-cabai-merah-keriting"></div>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                         </ul>
                     </div>
                     <div class="body">
-                        <div id="apex-timeline-chart"></div>
+                        <div id="apex-cabai-rawit-merah"></div>
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                         </ul>
                     </div>
                     <div class="body">
-                        <div id="apex-timeline-chart"></div>
+                        <div id="apex-cabai-rawit-hijau"></div>
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                         </ul>
                     </div>
                     <div class="body">
-                        <div id="apex-timeline-chart"></div>
+                        <div id="apex-bawang-merah"></div>
                     </div>
                 </div>
             </div>
