--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -45,7 +45,7 @@
     <script src="{{ url_for('static', filename='assets/bundles/apexcharts.bundle.js') }}"></script>
 
     <script src="{{ url_for('static', filename='assets/bundles/mainscripts.bundle.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/pages/charts/apex.js') }}"></script>
+    <script src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
 
 </html>
