make the button date range in dashboard chart is working

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                 <div class="card">
-                    <div class="header">
+                    <div class="header" id="cabai-merah-besar">
                         <h2>Cabai Merah Besar</h2>
                         <ul class="header-dropdown dropdown">
                             <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_month">1M</button>
@@ -49,7 +49,7 @@
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                 <div class="card">
-                    <div class="header">
+                    <div class="header" id="cabai-merah-keriting">
                         <h2>Cabai Merah Keriting</h2>
                         <ul class="header-dropdown dropdown">
                             <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_month">1M</button>
@@ -69,7 +69,7 @@
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                 <div class="card">
-                    <div class="header">
+                    <div class="header" id="cabai-rawit-merah">
                         <h2>Cabai Rawit Merah</h2>
                         <ul class="header-dropdown dropdown">
                             <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_month">1M</button>
@@ -89,7 +89,7 @@
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                 <div class="card">
-                    <div class="header">
+                    <div class="header" id="cabai-rawit-hijau">
                         <h2>Cabai Rawit Hijau</h2>
                         <ul class="header-dropdown dropdown">
                             <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_month">1M</button>
@@ -109,7 +109,7 @@
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                 <div class="card">
-                    <div class="header">
+                    <div class="header" id="bawang-merah">
                         <h2>Bawang Merah</h2>
                         <ul class="header-dropdown dropdown">
                             <li><button class="btn btn-sm btn-outline-secondary mr-1" id="one_month">1M</button>
