--- a/templates/predict.html
+++ b/templates/predict.html
@@ -23,8 +23,11 @@
                 <div class="card">
                     <div class="header">
                         <h2>Predict the Comodity Price - Pasar Kramat Kota Cirebon</h2>
-                        <p class="mt-3" style="margin-bottom: unset;">Comodity Available : Cabai Merah Besar, Cabai
+                        <p class="mt-3" style="margin-bottom: unset;">Comodity Available to Predict: Cabai Merah Besar, Cabai
                             Merah Keriting, Cabai Rawit Hijau, Cabai Rawit Merah, Bawang Merah</p>
+                    </div>
+                    <div class="body">
+                        
                     </div>
                 </div>
             </div>
