setup file example for xlsx file needed to make prediction

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -19,15 +19,31 @@
 
     <div class="container">
         <div class="row clearfix">
-            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-8">
                 <div class="card">
                     <div class="header">
                         <h2>Predict the Comodity Price - Pasar Kramat Kota Cirebon</h2>
-                        <p class="mt-3" style="margin-bottom: unset;">Comodity Available to Predict: Cabai Merah Besar, Cabai
+                        <p class="mt-3" style="margin-bottom: unset;">Comodity Available to Predict: Cabai Merah Besar,
+                            Cabai
                             Merah Keriting, Cabai Rawit Hijau, Cabai Rawit Merah, Bawang Merah</p>
                     </div>
                     <div class="body">
-                        
+                        <p> # Ini Form Untuk Generate Prediksi</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="card">
+                    <div class="header">
+                        <h2>Upload Dataset</h2>
+                        <p class="mt-3" style="margin-bottom: unset;">
+                            Dataset yang digunakan untuk melakukan prediksi harga komoditas setidaknya memiliki 30 baris
+                            data, contoh template bisa di lihat <a
+                                href="{{ url_for('web.download_example_dataset') }}">disini</a>.
+                        </p>
+                    </div>
+                    <div class="body">
+                        <p> # Ini Form Upload Dataset</p>
                     </div>
                 </div>
             </div>
