base layout form predict

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -28,7 +28,34 @@
                             Merah Keriting, Cabai Rawit Hijau, Cabai Rawit Merah, Bawang Merah</p>
                     </div>
                     <div class="body">
-                        <p> # Ini Form Untuk Generate Prediksi</p>
+                        <form method="POST" id="prediction_form">
+                            <div class="row clearfix">
+                                <div class="col-lg-4 col-md-8">
+                                    <p> <b>Comodity Name</b> </p>
+                                    <select class="form-control show-tick">
+                                        <option value="">-- Pilih --</option>
+                                        <option value="bawang_merah">Bawang Merah</option>
+                                        <option value="cabai_merah_besar">Cabai Merah Besar</option>
+                                        <option value="cabai_merah_keriting">Cabai Merah Keriting</option>
+                                        <option value="cabai_rawit_hijau">Cabai Rawit Hijau</option>
+                                        <option value="cabai_rawit_hijau">Cabai Rawit Merah</option>
+                                    </select>
+                                </div>
+                                <div class="col-lg-4 col-md-8">
+                                    <p> <b>Days Predict</b> </p>
+                                    <select class="form-control show-tick">
+                                        <option value="">-- Pilih --</option>
+                                        <option value="1">1 Day</option>
+                                        <option value="3">3 Days</option>
+                                    </select>
+                                </div>
+                                <div class="col-lg-4 col-md-8">
+                                    <p> &nbsp; </p>
+                                    <button type="submit"
+                                        class="btn btn-raised btn-primary waves-effect">Submit</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
