--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/amaze.style.min.css') }}">
     <!-- Animate -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <!-- Bootstrap Select Css -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/plugins/bootstrap-select/css/bootstrap-select.css') }}" />
 </head>
 
 <body class="font-ubuntu">
@@ -46,7 +48,7 @@
     <script src="{{ url_for('static', filename='assets/bundles/apexcharts.bundle.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/bundles/mainscripts.bundle.js') }}"></script>
     <script src="{{ url_for('static', filename='index.js') }}"></script>
-    
+
     {% block script %} {% endblock %}
 </body>
 
